src/test/deca/context/invalid/testDoubleDefinitionField.deca
// Description : Double définition d'un champ de classe
class A {
    int a;
    boolean a;
}
